Fixed navbar overlaped content

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,14 +43,6 @@ dd {
   margin: 0;
 }
 
-/* Выставляем основные настройки по-умолчанию для body */
-body {
-  min-height: 100vh;
-  scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-}
-
 /* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
 ul[class],
 ol[class] {
@@ -91,15 +83,18 @@ select {
   }
 }
 
-.container {
+main {
     margin-left: auto;
     margin-right: auto;
     width: 936px;
+    margin-bottom: 40px;
 }
 
 body {
     background-color: $background;
     font-family: Roboto;
+    height: 100%;
+    padding-bottom: 80px;
 }
 
 header{
@@ -152,8 +147,7 @@ header{
 nav {
   box-shadow: 0px 8px 12px 6px rgba(0, 0, 0, 0.3), 0px 4px 4px rgba(0, 0, 0, 0.3);
   background: #2A2831;
-  position: sticky;
-  margin-top: 40px;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 80px;
